--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,16 @@
             <artifactId>org.eclipse.jgit</artifactId>
             <version>6.3.0.202209071007-r</version>
         </dependency>
-	<dependency>
-    	    <groupId>com.googlecode.json-simple</groupId>
-    	    <artifactId>json-simple</artifactId>
-    	    <version>1.1.1</version>
-	</dependency>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>de.mkammerer</groupId>
+            <artifactId>argon2-jvm</artifactId>
+            <version>2.11</version>
+        </dependency>
     </dependencies>
 
     <build>
